code/typescript/NaturalLanguageProcessing/v0/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# Natural Language Processing client library for JavaScript

[![API Version](https://img.shields.io/badge/api-v0.0.0-blue)](https://developer.factset.com/api-catalog/natural-language-processing-api)
[![npm](https://img.shields.io/badge/npm-v0.40.0-orange)](https://www.npmjs.com/package/@factset/sdk-naturallanguageprocessing/v/0.40.0)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)

Identify and extract named entities from unstructured or semi-structured text.

This TypeScript/JavaScript package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 0.0.0
- SDK version: 0.40.0
- Build package: com.factset.sdk.codegen.FactSetJavascriptClientCodegen

For more information, please visit [https://developer.factset.com/contact](https://developer.factset.com/contact)

## Requirements

* Node.js >= 18

## Installation

### npm

```shell
npm install @factset/sdk-utils @factset/sdk-naturallanguageprocessing@0.40.0
```

### yarn

```shell
yarn add @factset/sdk-utils @factset/sdk-naturallanguageprocessing@0.40.0
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup Node.js environment
   1. Install and activate Node.js >=18. If you're using [nvm](https://github.com/nvm-sh/nvm):

      ```sh
      nvm install 18
      nvm use 18
      ```

   2. (optional) [Install yarn](https://yarnpkg.com/getting-started/install).
3. [Install dependencies](#installation).
4. Run the following:

> [!IMPORTANT]
> The parameter variables defined below are just examples and may potentially contain non valid values. Please replace them with valid values.

### Example Code


```javascript
const { ApiClient, AdvancedApi } = require('@factset/sdk-naturallanguageprocessing');
const { ConfidentialClient } = require('@factset/sdk-utils');

const apiClient = ApiClient.instance;

// Examples for each supported authentication method are below,
// choose one that satisfies your use case.

// (Preferred) OAuth 2.0: FactSetOAuth2
// See https://github.com/FactSet/enterprise-sdk#oauth-20
// for information on how to create the app-config.json file
//
// The confidential client instance should be reused in production environments.
// See https://github.com/FactSet/enterprise-sdk-utils-typescript#authentication
// for more information on using the ConfidentialClient class
apiClient.factsetOauth2Client = new ConfidentialClient('/path/to/app-config.json');

// Basic authentication: FactSetApiKey
// See https://github.com/FactSet/enterprise-sdk#api-key
// for information how to create an API key
// const FactSetApiKey = apiClient.authentications['FactSetApiKey'];
// FactSetApiKey.username = 'USERNAME-SERIAL';
// FactSetApiKey.password = 'API-KEY';

const apiInstance = new AdvancedApi();
const advancedRequestRoot = new naturallanguageprocessing.AdvancedRequestRoot(); // AdvancedRequestRoot | 
const opts = {
  'model': "'meta.llama-4-scout-instruct'" // String | Optional override for the Advanced model backend.
};

// Call api endpoint
apiInstance.postAdvancedNerExtraction(advancedRequestRoot, opts).then(
  data => {

    console.log('API called successfully. Returned data:');
    console.log(data);
  },
  error => {
    console.error(error);
  },
);

```


## Using a Proxy

To add a HTTP proxy for the API client, you can set the proxyUrl for the ApiClient instance:

```javascript
const { ApiClient } = require('@factset/sdk-naturallanguageprocessing');

const apiClient = ApiClient.instance;
apiClient.setProxyUrl('http://username:password@proxy.example.com:8080');
```

## Documentation for API Endpoints

All URIs are relative to *https://api.factset.com/aiml/ner/v0*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*naturallanguageprocessing.AdvancedApi* | [**postAdvancedNerExtraction**](docs/AdvancedApi.md#postAdvancedNerExtraction) | **POST** /advanced | Advanced Processing
*naturallanguageprocessing.ExpressApi* | [**postExpressNerExtraction**](docs/ExpressApi.md#postExpressNerExtraction) | **POST** /express | Express Processing


## Documentation for Models

 - [naturallanguageprocessing.AdvancedEntityType](docs/AdvancedEntityType.md)
 - [naturallanguageprocessing.AdvancedInput](docs/AdvancedInput.md)
 - [naturallanguageprocessing.AdvancedRequestRoot](docs/AdvancedRequestRoot.md)
 - [naturallanguageprocessing.ErrorResponse](docs/ErrorResponse.md)
 - [naturallanguageprocessing.ErrorSource](docs/ErrorSource.md)
 - [naturallanguageprocessing.ExpressInput](docs/ExpressInput.md)
 - [naturallanguageprocessing.ExpressRequestRoot](docs/ExpressRequestRoot.md)
 - [naturallanguageprocessing.HTTPError](docs/HTTPError.md)
 - [naturallanguageprocessing.LookupStatus](docs/LookupStatus.md)
 - [naturallanguageprocessing.OutputItem](docs/OutputItem.md)
 - [naturallanguageprocessing.OutputRoot](docs/OutputRoot.md)
 - [naturallanguageprocessing.StandardEntityType](docs/StandardEntityType.md)


## Documentation for Authorization



### FactSetApiKey

- **Type**: HTTP basic authentication



### FactSetOAuth2


- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


# Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

# Copyright

Copyright 2026 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
