code/typescript/NaturalLanguageProcessing/v1/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# Natural Language Processing client library for JavaScript

[![API Version](https://img.shields.io/badge/api-v1.3.0-blue)]()
[![npm](https://img.shields.io/npm/v/@factset/sdk-naturallanguageprocessing)](https://www.npmjs.com/package/@factset/sdk-naturallanguageprocessing)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)

APIs that leverage Natural Language Processing to help extract meaningful data from unstructured text

This TypeScript/JavaScript package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 1.3.0
- SDK version: 0.24.0
- Build package: com.factset.sdk.codegen.FactSetJavascriptClientCodegen

For more information, please visit [https://developer.factset.com/contact](https://developer.factset.com/contact)

## Requirements

* Node.js >= 18

## Installation

### npm

```shell
npm install @factset/sdk-utils @factset/sdk-naturallanguageprocessing@0.24.0
```

### yarn

```shell
yarn add @factset/sdk-utils @factset/sdk-naturallanguageprocessing@0.24.0
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup Node.js environment
   1. Install and activate Node.js >=18. If you're using [nvm](https://github.com/nvm-sh/nvm):

      ```sh
      nvm install 18
      nvm use 18
      ```

   2. (optional) [Install yarn](https://yarnpkg.com/getting-started/install).
3. [Install dependencies](#installation).
4. Run the following:

> [!IMPORTANT]
> The parameter variables defined below are just examples and may potentially contain non valid values. Please replace them with valid values.

### Example Code


```javascript
const { ApiClient, AITextSummarizationApi } = require('@factset/sdk-naturallanguageprocessing');
const { ConfidentialClient } = require('@factset/sdk-utils');

const apiClient = ApiClient.instance;

// Examples for each supported authentication method are below,
// choose one that satisfies your use case.

// (Preferred) OAuth 2.0: FactSetOAuth2
// See https://github.com/FactSet/enterprise-sdk#oauth-20
// for information on how to create the app-config.json file
//
// The confidential client instance should be reused in production environments.
// See https://github.com/FactSet/enterprise-sdk-utils-typescript#authentication
// for more information on using the ConfidentialClient class
apiClient.factsetOauth2Client = new ConfidentialClient('/path/to/app-config.json');

// Basic authentication: FactSetApiKey
// See https://github.com/FactSet/enterprise-sdk#api-key
// for information how to create an API key
// const FactSetApiKey = apiClient.authentications['FactSetApiKey'];
// FactSetApiKey.username = 'USERNAME-SERIAL';
// FactSetApiKey.password = 'API-KEY';

const apiInstance = new AITextSummarizationApi();
const opts = {
  'summarizationRequest': new naturallanguageprocessing.SummarizationRequest() // SummarizationRequest | 
};

// Call api endpoint
apiInstance.summarizationHeadline(opts).then(
  data => {

    console.log('API called successfully. Returned data:');
    console.log(data);
  },
  error => {
    console.error(error);
  },
);

```


## Using a Proxy

To add a HTTP proxy for the API client, you can set the proxyUrl for the ApiClient instance:

```javascript
const { ApiClient } = require('@factset/sdk-naturallanguageprocessing');

const apiClient = ApiClient.instance;
apiClient.setProxyUrl('http://username:password@proxy.example.com:8080');
```

## Documentation for API Endpoints

All URIs are relative to *https://api.factset.com/cognitive/nlp/v1*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*naturallanguageprocessing.AITextSummarizationApi* | [**summarizationHeadline**](docs/AITextSummarizationApi.md#summarizationHeadline) | **POST** /summarization/headline | Endpoint to generate a headline from text
*naturallanguageprocessing.AITextSummarizationApi* | [**summarizationHeadlineAndSummary**](docs/AITextSummarizationApi.md#summarizationHeadlineAndSummary) | **POST** /summarization/headline-and-summary | Endpoint to summarize and generate a headline from text
*naturallanguageprocessing.AITextSummarizationApi* | [**summarizationResult**](docs/AITextSummarizationApi.md#summarizationResult) | **GET** /summarization/result/{resultId} | Endpoint to obtain result of a particular summarization job
*naturallanguageprocessing.AITextSummarizationApi* | [**summarizationSummary**](docs/AITextSummarizationApi.md#summarizationSummary) | **POST** /summarization/summary | Endpoint to summarize text
*naturallanguageprocessing.AIThemesApi* | [**themesExtractThemes**](docs/AIThemesApi.md#themesExtractThemes) | **POST** /themes | Endpoint to begin theme extraction job
*naturallanguageprocessing.AIThemesApi* | [**themesGetStatus**](docs/AIThemesApi.md#themesGetStatus) | **GET** /themes/{id}/status | Endpoint to get the completion status of a themes job
*naturallanguageprocessing.AIThemesApi* | [**themesGetThemes**](docs/AIThemesApi.md#themesGetThemes) | **GET** /themes/{id} | Endpoint to get a theme (and sentiments if requested) job result
*naturallanguageprocessing.NamedEntityRecognitionApi* | [**nerEntities**](docs/NamedEntityRecognitionApi.md#nerEntities) | **POST** /ner/entities | Endpoint to detect entities from text
*naturallanguageprocessing.QuestionAnswerApi* | [**qnaGetAnswers**](docs/QuestionAnswerApi.md#qnaGetAnswers) | **GET** /qna/answers/{id} | Endpoint to get the answer(s)
*naturallanguageprocessing.QuestionAnswerApi* | [**qnaGetStatus**](docs/QuestionAnswerApi.md#qnaGetStatus) | **GET** /qna/answers/{id}/status | Endpoint to get the completion status for a Q&amp;A request
*naturallanguageprocessing.QuestionAnswerApi* | [**qnaPostQuestion**](docs/QuestionAnswerApi.md#qnaPostQuestion) | **POST** /qna/answers | Endpoint to submit a question for answer(s)


## Documentation for Models

 - [naturallanguageprocessing.Error](docs/Error.md)
 - [naturallanguageprocessing.ErrorSource](docs/ErrorSource.md)
 - [naturallanguageprocessing.HTTPError](docs/HTTPError.md)
 - [naturallanguageprocessing.HTTPErrorRoot](docs/HTTPErrorRoot.md)
 - [naturallanguageprocessing.NEREntity](docs/NEREntity.md)
 - [naturallanguageprocessing.NEREntityList](docs/NEREntityList.md)
 - [naturallanguageprocessing.NERInputDataSchema](docs/NERInputDataSchema.md)
 - [naturallanguageprocessing.NERInputSchema](docs/NERInputSchema.md)
 - [naturallanguageprocessing.NEROrganization](docs/NEROrganization.md)
 - [naturallanguageprocessing.NERResponseSchema](docs/NERResponseSchema.md)
 - [naturallanguageprocessing.QnAAnswer](docs/QnAAnswer.md)
 - [naturallanguageprocessing.QnAAnswerParameters](docs/QnAAnswerParameters.md)
 - [naturallanguageprocessing.QnAAnswerParametersRoot](docs/QnAAnswerParametersRoot.md)
 - [naturallanguageprocessing.QnAAnswerRoot](docs/QnAAnswerRoot.md)
 - [naturallanguageprocessing.SummarizationHTTPError](docs/SummarizationHTTPError.md)
 - [naturallanguageprocessing.SummarizationRequest](docs/SummarizationRequest.md)
 - [naturallanguageprocessing.SummarizationResult](docs/SummarizationResult.md)
 - [naturallanguageprocessing.SummarizationResultID](docs/SummarizationResultID.md)
 - [naturallanguageprocessing.Task](docs/Task.md)
 - [naturallanguageprocessing.TaskRoot](docs/TaskRoot.md)
 - [naturallanguageprocessing.ThemeSentiment](docs/ThemeSentiment.md)
 - [naturallanguageprocessing.ThemeSentimentsRoot](docs/ThemeSentimentsRoot.md)
 - [naturallanguageprocessing.ThemesParameters](docs/ThemesParameters.md)
 - [naturallanguageprocessing.ThemesParametersRoot](docs/ThemesParametersRoot.md)
 - [naturallanguageprocessing.ValidationError](docs/ValidationError.md)
 - [naturallanguageprocessing.ValidationErrorDetail](docs/ValidationErrorDetail.md)
 - [naturallanguageprocessing.ValidationErrorDetailLocation](docs/ValidationErrorDetailLocation.md)


## Documentation for Authorization



### FactSetApiKey

- **Type**: HTTP basic authentication



### FactSetOAuth2


- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


# Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

# Copyright

Copyright 2022 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
